--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,23 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+header {
+  background-color: peachpuff;
+  padding: 10px;
+  text-align: center;
+}
+header img {
+  height: 1.25em;
+  position: relative;
+  top: 10px;
+  left: -5px;
+}
+h1, h2 {
+  text-align: center;
+  color: #fff;
+}
+h1 {
+  margin: 0.5em 0;
+  font-size: 1.5em;
+  font-weight: normal;
+}
